Fixed mobile calendar styling, holidays are now correctly shown on mobile calendar

--- a/src/pages/Calendar/calendar.module.css
+++ b/src/pages/Calendar/calendar.module.css
@@ -44,7 +44,6 @@
     background-color: lightblue;
     width: 100%;
     min-height: 150px;
-    max-height: 400px;
     margin-top: 20px;
     margin-left: 150px;
     margin-right: 150px;
@@ -68,7 +67,7 @@
     display: flex;
     flex-direction: column;
     width: 90%;
-    height: auto;
+    height: 100%;
     background-color: lightblue;
     justify-content: center;
     align-items: center;
@@ -80,11 +79,11 @@
     justify-content: center;
     height: 80%;
     width: 100%;
+    min-height: 14em;
 }
 
 .onHolidayContent {
     display: flex;
-    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     width: 50%;
@@ -93,27 +92,30 @@
 }
 
 .onHolidayContent > p {
-    text-align: center;
+    text-align: left;
     margin: 0;
-    width: 50%;
+    width: 80%;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .workingContent {
     display: flex;
-    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     width: 50%;
     height: 100%;
-    padding-left: 19px;
     border-left: 2px solid black;
     flex-direction: column;
+    min-height: 14em;
 }
 
 .workingContent > p{
-    text-align: center;
+    text-align: left;
     margin: 0;
-    width: 50%;
+    width: 80%;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .headerCont {
@@ -129,6 +131,8 @@
     justify-content: center;
     width: 50%;
     background-color: lightgreen;
+    padding-top: 10px;
+    padding-bottom: 10px;
     /* border-right: 1px solid black; */
 }
 
@@ -138,7 +142,8 @@
     justify-content: center;
     width: 50%;
     background-color: lightyellow;
-    padding: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     border-left: 2px solid black;
 }
 
